Migration to JDK 20.